...
                          onLock: lockVoiceRecord,
                          onPickUpChanged: (v) =>
                              setState(() => voicePickUp = v),
                          size: 40,
                        )
                          : GestureDetector(
                              key: const ValueKey('send'),
                              onTap: widget.onSend,
                              child: Container(
                                width: 40,
                                height: 40,
                                alignment: Alignment.center,
                                decoration: BoxDecoration(
...
